# nano-bot-learn

./: AGENTS.md  README.md  pyproject.toml
docs/: 2026-04-22_session_manager.md  2026-04-24_security_network.md  2026-04-25_providers_base.md  2026-04-27_cron.md  2026-04-28_config.md  2026-04-29_agent_hook.md  _template_module_note.md
docs/plans/: 2026-04-22-module-note-template-plan.md
nanobot_learn/: __init__.py
nanobot_learn/agent/: __init__.py  hook.py
nanobot_learn/config/: __init__.py  loader.py  paths.py  schema.py
nanobot_learn/cron/: __init__.py  service.py  types.py
nanobot_learn/providers/: __init__.py  base.py  registry.py
nanobot_learn/security/: __init__.py  network.py
nanobot_learn/session/: manager.py
nanobot_learn/utils/: __init__.py  helpers.py
tests/: test___init__.py
tests/agent/: test_hook.py
tests/config/: test_loader.py  test_paths.py  test_schema.py
tests/cron/: test_cron_service.py
tests/providers/: test_base.py
tests/security/: test_security_network.py
tests/session/: test_manager.py  test_manager_repair.py  test_session_history.py
tests/utils/: test_helpers.py
