[project]
name = "nanobot-learn"
version = "0.1.0"
description = "A minimal Python project for learning nanobot with TDD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0,<1.0.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "croniter>=6,<7",
    "filelock>3.29,<4"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_learn"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
